# xtea

./: .gitignore  Cargo.toml  README.md  build_example.py  plugin guide.md
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
examples/nonconststate/: Cargo.toml
examples/nonconststate/src/: lib.rs
examples/template/: Cargo.toml
examples/template/src/: lib.rs
xtea/: Cargo.toml
xtea/src/: main.rs  ui.rs
xtea/src/ui/: style_editor.rs
xtealib/: Cargo.toml
xtealib/src/: lib.rs
