[package]
name = "xtea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
env_logger = "0.10.0"
image = { version = "0.24.6", features = ["png"] }
imgui-wgpu = "0.23.0"
imgui-winit-support = "0.11.0"
pollster = "0.3.0"
wgpu = "0.16.3"
winit = "0.27.5"
xtealib = { path = "../xtealib" }
log = "0.4.19"
imgui = { version = "0.11.0", features = ["docking"] }