[package]
name = "nonconststate-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
once_cell = "1.18.0"
xtealib = { path = "../../xtealib"}
imgui = { version = "0.11.0", features = ["docking"] }

[lib]
crate-type = ["cdylib"]
